feat: add email send
